force-app/main/default/objects/Section_Details__c/Section_Details__c.object-meta.xml
<CustomObject>
    <label>Section Details Master</label>
    <nameField>
        <displayFormat>SDM-{0000}</displayFormat>
        <label>Section Detail Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Details Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>