force-app/main/default/objects/Section_Details__c/fields/Can_Reopen_This_Section__c.field-meta.xml
<CustomField>
    <fullName>Can_Reopen_This_Section__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Reopen This Section</label>
    <type>Checkbox</type>
</CustomField>