force-app/main/default/objects/Section_Details__c/fields/Page_Name_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_Name_URL__c</fullName>
    <label>Page Name/URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>