force-app/main/default/objects/Section_Details__c/fields/Scheme_Items__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Items</label>
    <referenceTo>Scheme_Items__c</referenceTo>
    <relationshipName>Section_Details</relationshipName>
    <type>Lookup</type>
</CustomField>