force-app/main/default/objects/Section_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Scheme_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>